Code is now GPLv3 licensed
git-svn-id: https://svn.pixelspark.nl/public/photogenix@4 b3e6f92c-dc01-47fa-9c73-c16d8228bda1

--- a/trunk/default.css
+++ b/trunk/default.css
@@ -43,6 +43,7 @@ DIV#overlay {
   width:1024px;
   background-image:url('overlay.png');
   overflow:hidden;
+  background-color:black;
 }
 
 DIV#quotes {
